force-app/main/default/objects/Seguro__c/Seguro__c.object-meta.xml
<CustomObject>
    <label>Seguro</label>
    <nameField>
        <label>Nombre de Seguro</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Seguros</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>