force-app/main/default/objects/Seguro__c/fields/Prima_Anual__c.field-meta.xml
<CustomField>
    <fullName>Prima_Anual__c</fullName>
    <label>Prima Anual</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>