force-app/main/default/objects/Seguro__c/fields/Prima_Mensual__c.field-meta.xml
<CustomField>
    <fullName>Prima_Mensual__c</fullName>
    <label>Prima Mensual</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>