force-app/main/default/objects/Seguro__c/fields/Suma_Asegurada__c.field-meta.xml
<CustomField>
    <fullName>Suma_Asegurada__c</fullName>
    <label>Suma Asegurada</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>